exampleapp/deployment/deployment.envsubst.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "${APP_NAME}"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "${APP_NAME}"
  template:
    metadata:
      labels:
        app: "${APP_NAME}"
    spec:
      containers:
        - name: exampleapp
          image: "${K3D_REGISTRY_ADDR}/${APP_NAME}:${APP_VERSION}"
          ports:
            - containerPort: 8080
