exampleapp/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "k8s-exer-exampleapp"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "k8s-exer-exampleapp"
  template:
    metadata:
      labels:
        app: "k8s-exer-exampleapp"
    spec:
      containers:
        - name: exampleapp
          image: "k3d-img-registry.localhost:10101/k8s-exer-exampleapp:latest"
          ports:
            - containerPort: 8080
